--- a/examples/stylesheets/examples.css
+++ b/examples/stylesheets/examples.css
@@ -27,10 +27,13 @@ path.domain {
   stroke-width: 1px;
   shape-rendering: crispEdges;
 }
-.axis .tick line {
+.axis .tick line, .axis .minor line {
   stroke: #000;
   stroke-width: 1px;
   shape-rendering: crispEdges;
+}
+.axis .minor line {
+  stroke: #aaa;
 }
 .axis text {
   fill: #222;
