Better support for animation and 2D histograms.

--- a/examples/stylesheets/examples.css
+++ b/examples/stylesheets/examples.css
@@ -10,6 +10,10 @@ body {
 .LineChart .line {
   stroke-width: 2px;
 }
+/* 2D Histogram bins */
+.Histogram2D .tile {
+  shape-rendering: crispEdges;
+}
 /* Error bars */
 .uncertainty {
   stroke-width: 1px;
